src/objects/Contract_Sales_Rep__c.object
<CustomObject>
    <fields>
        <fullName>All_Invoices_Paid_Date__c</fullName>
        <label>All Invoices Paid Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bonus_GP__c</fullName>
        <formula>Contract__r.ActualGrossProfit__c * Percentage_of_GP_Allocation__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CommissionProfileCurrency__c</fullName>
        <formula>text(Commission_Profile__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommissionProfileCurrency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Percentage__c</fullName>
        <label>Commission Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Profile_Commission_Type__c</fullName>
        <formula>TEXT(Commission_Profile__r.CommissionType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Profile Commission Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Profile_FixedCommissionRate__c</fullName>
        <formula>Commission_Profile__r.FixedCommissionRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Profile FixedCommissionRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Profile__c</fullName>
        <label>Sales Rep</label>
        <referenceTo>Commission_Profile__c</referenceTo>
        <relationshipLabel>Sales Reps</relationshipLabel>
        <relationshipName>Sales_Reps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <label>Commission Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractClientSpendSocial__c</fullName>
        <formula>Contract__r.Client_Spend_Social__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Client Spend Social</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractClientSpendYT__c</fullName>
        <formula>Contract__r.Client_Spend_YT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Client Spend YT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractGrossProfitSocial__c</fullName>
        <formula>Contract__r.Actual_Gross_Profit_Social__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Gross Profit Social</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractGrossProfitYT__c</fullName>
        <formula>Contract__r.Actual_Gross_Profit_YT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Gross Profit YT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Actual_Gross_Profit__c</fullName>
        <formula>Contract__r.ActualGrossProfit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Actual Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Client_Spend_Social__c</fullName>
        <label>Contract_Client_Spend_Social</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Client_Spend_YT__c</fullName>
        <label>Contract_Client_Spend_YT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Client_Spend__c</fullName>
        <formula>Contract__r.Client_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Gross_Profit_Social__c</fullName>
        <label>Contract_Gross_Profit_Social</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Gross_Profit_YT__c</fullName>
        <label>Contract_Gross_Profit_YT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Sales Reps</relationshipLabel>
        <relationshipName>Sales_Reps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CurrencyNotMatched__c</fullName>
        <formula>TEXT(CurrencyIsoCode) != TEXT(Contract__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrencyNotMatched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <formula>$User.Id = Commission_Profile__r.Salesforce_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedCommission__c</fullName>
        <label>Expected commission APEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Profit_per_Rep__c</fullName>
        <label>Expected GP/Rep APEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_commission__c</fullName>
        <formula>IF(Contract__r.Opportunity__r.CloseDate&gt;=DATE(2017,1,1),	
  ExpectedCommission__c,
  IF(AND(Contract__r.Client_Spend__c!=0,Contract__r.No_of_sales_reps__c!=0),
    IF(ISPICKVAL(Commission_Profile__r.CommissionType__c,&quot;No Commission&quot;),NULL,
      IF( ROUND(Contract__r.ActualGrossProfit__c / Contract__r.Client_Spend__c,2) &lt; 0.05, 0,
      IF( ROUND(Contract__r.ActualGrossProfit__c / Contract__r.Client_Spend__c,2) &lt; 0.10, Contract__r.ActualGrossProfit__c *0.01,
      IF( ROUND(Contract__r.ActualGrossProfit__c / Contract__r.Client_Spend__c,2) &lt; 0.15, Contract__r.ActualGrossProfit__c *0.02,
      IF( ROUND(Contract__r.ActualGrossProfit__c / Contract__r.Client_Spend__c,2) &lt; 0.20, Contract__r.ActualGrossProfit__c *0.03,
      IF( ROUND(Contract__r.ActualGrossProfit__c / Contract__r.Client_Spend__c,2) &lt; 0.25, Contract__r.ActualGrossProfit__c *0.04,
      Contract__r.Client_Spend__c *0.0125)))))
    )/ Contract__r.No_of_sales_reps__c
  ,NULL)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossProfitperRep__c</fullName>
        <label>Gross Profit per Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossProfitperRepformula__c</fullName>
        <formula>IF(Contract__r.No_of_sales_reps__c!=0 &amp;&amp; 
Contract__r.AllInvoicesPaidDate__c &gt;= DATE(2016,1,1) &amp;&amp; 
Contract__r.InvoicesPaid__c,
  Contract__r.ActualGrossProfit__c/Contract__r.No_of_sales_reps__c,
NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected GP/Rep formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Percentage_of_GP_Allocation__c</fullName>
        <label>% of GP Allocation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep</fullName>
                    <default>true</default>
                    <label>Sales Rep</label>
                </value>
                <value>
                    <fullName>Internal Sales</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <description>Unique ID of Sales Rep prevents from adding him to contract twice.</description>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sales Rep</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Reps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>